Add options to ensure Java 11 compatibility.
Signed-off-by: co-jo <colin.hryniowski@dell.com>