@@ -164,6 +164,8 @@ public abstract class AbstractService implements Service {
                 .put("options", props)
                 .put("image", pravegaImgSpec)
                 .put("tier2", tier2Spec())
+                .put("segmentStoreJVMOptions", getSegmentStoreJVMOptions())
+                .put("controllerJVMOptions", getControllerJVMOptions())
                 .build();
 
         return ImmutableMap.<String, Object>builder()
@@ -263,6 +265,16 @@ public abstract class AbstractService implements Service {
                 return e.getValue();
             }
         }));
+    }
+
+    // Removal of the JVM option 'UseCGroupMemoryLimitForHeap' is required with JVM environemnts >= 10. This option
+    // is supplied by default by the operators.
+    private String[] getSegmentStoreJVMOptions() {
+        return new String[]{"-XX:+UseContainerSupport", "-XX:-UseCGroupMemoryLimitForHeap"};
+    }
+
+    private String[] getControllerJVMOptions() {
+        return new String[]{"-XX:+UseContainerSupport", "-XX:-UseCGroupMemoryLimitForHeap"};
     }
 
     private Map<String, Object> getPersistentVolumeClaimSpec(String size, String storageClass) {
